original/Deployment_apps_v1_hybrid-app-demo_wordpress-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: wordpress-demo
  name: wordpress-fe
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wordpress-fe
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordpress-fe
    spec:
      containers:
      - env:
        - name: WORDPRESS_DB_HOST
          value: wordpress-be
        - name: WORDPRESS_DB_USER
          value: wordpress_user
        - name: WORDPRESS_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: wordpress-db-password
              name: wordpress-db-secret
        - name: WORDPRESS_DB_NAME
          value: wordpress_db
        - name: HTTP_X_FORWARDED_PROTO
          value: http,https
        image: wordpress:latest
        imagePullPolicy: Always
        name: wordpress
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/www/html/wp-content
          name: wordpress-plugins
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: wordpress-sa
      serviceAccountName: wordpress-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - name: wordpress-plugins
        persistentVolumeClaim:
          claimName: wordpress-plugins-pvc
