original/Service__v1_hybrid-app-demo_wordpress-be.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: wordpress-demo
  name: wordpress-be
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    vm.kubevirt.io/name: wordpress-be
  sessionAffinity: None
  type: ClusterIP
