original/Service__v1_hybrid-app-demo_wordpress-cache.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress-cache-be
    app.kubernetes.io/part-of: wordpress-demo
  name: wordpress-cache
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: wordpress-cache-be
    component: redis-cache
  sessionAffinity: None
  type: ClusterIP
