original/Service__v1_hybrid-app-demo_wordpress-fe.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: wordpress-demo
  name: wordpress-fe
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress-fe
  sessionAffinity: None
  type: ClusterIP
